# entregavel-2-reiki-francis-2025-1

temperature_control/: package.xml  setup.py
temperature_control/temperature_control/: average_client_reset.py  temperature_avg_monitor.py  temperature_monitor.py  temperature_publisher.py
temperature_control/temperature_control/old_deprec/: OLD_average_client_reset.py  OLD_temperature_avg_monitor.py  OLD_temperature_monitor.py  OLD_temperature_publisher.py
temperature_control_bringup/: CMakeLists.txt  package.xml
temperature_control_bringup/launch/: base.launch.py  temperature_control.launch.py  teste2.launch.py
